classDiagram
direction TB

class HttpServer {
    -QTcpServer m_server
    -RequestProcessor* m_requestProcessor
    -QThread* m_processorThread
    -MessageManager& m_manager
    -QMap~qintptr,QTcpSocket*~ m_sockets
    -QMap~qintptr,ClientData~ m_clients
    +HttpServer(MessageManager& manager, QObject* parent)
    +~HttpServer()
    +start(quint16 port) bool
    -onNewConnection() void
    -onReadyRead() void
    -sendHttpResponse(...) void
}

class RequestProcessor {
    -MessageManager& m_manager
    +processRequest(qintptr socketDescriptor, QByteArray requestData) void
    -sendResponse(qintptr socketDescriptor, int statusCode, QString statusText, QString contentType, QByteArray body) void
    +requestProcessed(qintptr socketDescriptor)$
}

class MessageManager {
    -QVector~Contact~& m_contacts
    -QVector~std::shared_ptr~Chat~~& m_chats
    -QVector~std::shared_ptr~Message~std::string~~~& m_messages
    +MessageManager(QVector~Contact~& contacts, QVector~std::shared_ptr~Chat~~& chats, QVector~std::shared_ptr~Message~std::string~~~& messages, QObject* parent)
    +handleRequest(QString method, QString path, QJsonObject data) QJsonObject
    +addContact(QJsonObject data) bool
    +removeContact(contact_id id) bool
    +addChat(QJsonObject data) bool
    +removeChat(chat_id id) bool
    +addMessage(QJsonObject data) bool
    +removeMessage(message_id id) bool
    +getContacts() QVector~Contact~
    +getChats() QVector~std::shared_ptr~Chat~~
    +getMessages() QVector~std::shared_ptr~Message~std::string~~~
    -handleGetContacts() QJsonObject
    -handlePostContacts(QJsonObject data) QJsonObject
    -handleGetChats() QJsonObject
    -handlePostChats(QJsonObject data) QJsonObject
    -handleGetMessages() QJsonObject
    -handlePostMessages(QJsonObject data) QJsonObject
    +contactAdded(Contact contact)$
    +contactRemoved(contact_id id)$
    +chatAdded(std::shared_ptr~Chat~ chat)$
    +chatRemoved(chat_id id)$
    +messageAdded(std::shared_ptr~Message~std::string~~ message)$
    +messageRemoved(message_id id)$
    +requestProcessed(QString method, QString path, bool success)$
}

class Contact {
    +contact_id id
    +user_id ownerId
    +user_id contactId
    +QString contactName
    +QDateTime addedDate
    +Contact(contact_id id, user_id ownerId, user_id contactId, QString contactName, QDateTime addedDate)
    +Contact(contact_id id, user_id ownerId, user_id contactId, QString contactName)
    +~Contact()
}

class Chat {
    -mutable std::shared_mutex participants_mutex
    -mutable std::shared_mutex messages_mutex
    +chat_id id
    +chat_type type
    +std::vector~user_id~ participants
    +std::vector~message_id~ messages
    +std::chrono::system_clock::time_point created_date
    +Chat(chat_id id, chat_type type, std::vector~user_id~ participants, std::vector~message_id~ messages, std::chrono::system_clock::time_point created_date)
    +Chat(chat_id id, chat_type type, std::vector~user_id~ participants)
    +~Chat()
    +addParticipant(user_id participant) void
    +removeParticipant(user_id participant) void
    +hasParticipant(user_id participant) bool
    +addMessage(message_id msg_id) void
    +removeMessage(message_id msg_id) void
    +getMessages() std::vector~message_id~
    +getParticipants() std::vector~user_id~
    +operator+(user_id participant) Chat&
    +operator-(user_id participant) Chat&
}

class Message~ContentType~ {
    -mutable std::mutex status_mutex
    -mutable std::mutex content_mutex
    +message_id id
    +user_id sender_id
    +chat_id receiver_id
    +ContentType content
    +std::chrono::system_clock::time_point timestamp
    +message_status status
    +message_type type
    +Message(message_id id, user_id sender_id, chat_id receiver_id, ContentType content, time_point timestamp, message_type type)
    +Message(message_id id, user_id sender_id, chat_id receiver_id, ContentType content, message_type type)
    +~Message()
    +setStatus(message_status newStatus) void
    +getStatus() message_status
    +getContent() ContentType
    +setContent(const ContentType& newContent) void
}

class WidgetManager {
    -MessageManager& m_manager
    -user_id m_selectedContactUserId
    -chat_id m_selectedChatId
    -QVector~Contact~& m_contacts
    -QVector~std::shared_ptr~Chat~~& m_chats
    -QVector~std::shared_ptr~Message~std::string~~~& m_messages
    -QSplitter* m_mainSplitter
    -QTreeWidget* m_contactsTree
    -QTreeWidget* m_chatsTree
    -QTableWidget* m_messagesTable
    -QTextEdit* m_messageDetails
    -QPushButton* m_contactsLabel
    -QLabel* m_chatsLabel
    -QLabel* m_messagesLabel
    -QLabel* m_detailsLabel
    -QLineEdit* m_messageInput
    -QPushButton* m_sendButton
    +WidgetManager(MessageManager& manager, QVector~Contact~& contacts, QVector~std::shared_ptr~Chat~~& chats, QVector~std::shared_ptr~Message~std::string~~~& messages, QWidget* parent)
    +~WidgetManager()
    +updateContacts() void
    +updateChats() void
    +updateMessages() void
    +updateAll() void
    +onContactSelected(int index) void
    +onChatSelected(chat_id chatId) void
    +onMessageSelected(int index) void
    +onContactAdded(Contact contact) void
    +onContactRemoved(contact_id id) void
    +onChatAdded(std::shared_ptr~Chat~ chat) void
    +onChatRemoved(chat_id id) void
    +onMessageAdded(std::shared_ptr~Message~std::string~~ message) void
    +onMessageRemoved(message_id id) void
    -setupUI() void
    -setupConnections() void
    -clearAll() void
    -updateMessagesForChat(chat_id chatId) void
    -updateSendButtonState() void
    +contactSelected(contact_id id)$
    +chatSelected(chat_id id)$
    +messageSelected(message_id id)$
}

class UiStyles {
    <<namespace Ui>>
    +mainStylesheet() QString
    +panelHeaderStyle() QString
    +contactsButtonStyle() QString
    +detailsTextEditStyle() QString
}

class QApplication {
    <<Qt Framework>>
}

class QTcpServer {
    <<Qt Framework>>
}

class QTcpSocket {
    <<Qt Framework>>
}

class QThread {
    <<Qt Framework>>
}

HttpServer "1" -- "1" RequestProcessor : contains
HttpServer "1" -- "1" QThread : uses
HttpServer "1" -- "1" QTcpServer : uses
HttpServer "1" -- "*" QTcpSocket : manages
HttpServer "1" -- "1" MessageManager : uses
RequestProcessor "1" -- "1" MessageManager : uses
RequestProcessor --|> QObject : extends
HttpServer --|> QObject : extends
WidgetManager --|> QWidget : extends
WidgetManager "1" -- "1" MessageManager : uses
WidgetManager ..> UiStyles : uses
MessageManager "1" -- "*" Contact : manages
MessageManager "1" -- "*" Chat : manages
MessageManager "1" -- "*" Message~std::string~ : manages
Chat "1" -- "*" Message~std::string~ : references
Message~std::string~ "1" -- "1" Chat : belongs to
MessageManager ..> WidgetManager : signals
HttpServer ..> RequestProcessor : signals
RequestProcessor ..> HttpServer : signals
